fix: use portal with updated position on scroll and resize for dropdown box; set height for horizontal scrollbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,7 @@ html {
 
   ::-webkit-scrollbar {
     width: 0.25rem;
+    height: 0.25rem;
   }
   ::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 6px var(--shadow-dark);
